[package]
name = "sys2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.30"
user-idle = "0.6.0"
# idle = "0.2.0"
async-trait = "0.1"
serde_json = "1.0.133"
machine-uid = "0.5.3"
