[package]
name = "sys2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
rumqttc = "0.24"
sysinfo = "0.33.0"
chrono = "0.4.39"
user-idle = "0.6.0"
async-trait = "0.1"
machine-uid = "0.5.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
